applications/v4/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/BadRequestException.java
package com.example.weeklyplanning.web.rest.errors;

import org.springframework.http.HttpStatus;

public class BadRequestException extends BusinessException {

    public BadRequestException(String message) {
        super(HttpStatus.BAD_REQUEST, "BAD_REQUEST", message);
    }
}
